--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "@figma/plugin-typings": "^1.19.1",
+    "clipboard-copy": "^4.0.1",
     "css-loader": "^3.2.0",
     "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
