--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "dependencies": {
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
+    "prism-theme-night-owl": "^1.4.0",
     "sirv-cli": "^1.0.11",
+    "svelte-prism": "^1.1.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   }
 }
